@@ -9,6 +9,7 @@ var sure_to_present_selected_items = "%(sure_to_present_selected_items)s";
 var sure_to_cancel_edit = "%(sure_to_cancel_edit)s";
 var are_you_sure = "%(are_you_sure)s";
 var sure_to_take_over = "%(sure_to_take_over)s";
+var wait_msg = "%(wait_msg)s";
 """
 
 
@@ -39,6 +40,9 @@ class JSVariables(BrowserView):
         sure_to_take_over = translate('sure_to_take_over',
                                       domain='PloneMeeting',
                                       context=self.request)
+        wait_msg = translate('wait_msg',
+                             domain='PloneMeeting',
+                             context=self.request)
 
         return TEMPLATE % dict(
             plonemeeting_delete_meeting_confirm_message=plonemeeting_delete_meeting_confirm_message,
@@ -47,5 +51,6 @@ class JSVariables(BrowserView):
             sure_to_present_selected_items=sure_to_present_selected_items,
             sure_to_cancel_edit=sure_to_cancel_edit,
             are_you_sure=are_you_sure,
-            sure_to_take_over=sure_to_take_over
+            sure_to_take_over=sure_to_take_over,
+            wait_msg=wait_msg,
         )
