@@ -90,12 +90,12 @@
             </div>
 
             <tal:comment replace="nothing">Copy groups for this item</tal:comment>
-            <div class="discreet" tal:condition="python: context.isCopiesEnabled()"
+            <div class="discreet" tal:condition="context/isCopiesEnabled"
                                   tal:define="copyGroups context/getAllCopyGroups;">
                 <span class="item_attribute_label"
                       i18n:translate="PloneMeeting_label_copyGroups"></span>:&nbsp;&nbsp;
                 <tal:displayCopyGroups condition="copyGroups">
-                    <span tal:content="python: context.displayValue(context.listCopyGroups(include_auto=True), copyGroups)">Copy groups</span>
+                    <span tal:replace="structure context/displayCopyGroups">Copy groups</span>
                 </tal:displayCopyGroups>
                 <span tal:condition="not: copyGroups">-</span>
             </div>
