@@ -281,6 +281,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Moved emergency change comment popup to z3c.form to be able to define that comment is now required
 - Added helpe method MeetingItem.getAdviceObj(advId) that will return the 'meetingadvice' object for the given p_advId adviser
   id.  If advice object exists, it is returned, otherwise 'None' is returned
+- Display a "group users" icon next to the displayed copy groups and asked advices on the item view to be able to get informations
+  about users that are in the selected Plone groups, this way we know which users will have read access to the item and which will be
+  able to give an advice
 
 3.3 (2015-02-27)
 ----------------
